# rtc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: camera.h  color.cc  color.h  hit_interval.cc  hit_interval.h  hittable.h  hittable_list.h  main.cc  main.cpp  math_utils.h  ray.h  sphere.h  utils.cc  utils.h  vec3.h
tests/: base_world_render_diffused_sphere.ppm  base_world_render_diffused_sphere_lambertian_gamma_corrected.ppm
